Passing Params Attempt

--- a/templates/register.html
+++ b/templates/register.html
@@ -2,11 +2,11 @@
 
 <form action="#" method="post">
     <p>Please Enter Email:</p>
-    <p><input type="email" name="user_email"/></p>
+    <p><input type="email" name="user_email" value="{{ msg }}"/></p>
     <p>Please Enter First Name:</p>
     <p><input type="text" name="user_firstName"/></p>
     <p>Please Enter Last Name:</p>
-    <p><input type="text" name="user_lastName"/></p
+    <p><input type="text" name="user_lastName"/></p>
     <p>Please Enter Chosen Password:</p>
     <p><input type="password" name="user_password"/></p>
     <p>Please Enter Verify Chosen Password:</p>
