--- a/templates/validate_email.html
+++ b/templates/validate_email.html
@@ -1,9 +1,10 @@
 <h1>Hi {{user_firstName}} {{user_lastName}}!</h1>
 <h1>Thanks so much for registering with Minimize!</h1>
 <h3>Before simplifying your life...Please validate your email!</h3>
-<p>A code has been sent to {{user_email}}</p>
+<p>A code has been sent to {{user_email}}. Enter that code below</p>
 <!--For the password we can have a "Show Password" button -->
 
 <form action="#" method="post">
-    <input type="number" name="user_validation_code">
+    <input type="number" name="user_validation_code"><br><br>
+    <input type="submit" value="Submit">
 </form>
